--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
   },
   "dependencies": {
     "@mantine/core": "^7.16.0",
+    "@mantine/form": "^7.16.2",
     "@mantine/hooks": "^7.16.0",
     "@tabler/icons-react": "^3.28.1",
     "next": "15.1.4",
     "react": "^19.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.19.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.1.4",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.23.0"
   }
 }
