--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/form": "^7.16.2",
     "@mantine/hooks": "^7.16.0",
     "@tabler/icons-react": "^3.28.1",
+    "axios": "^1.7.9",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
